[gd_scene load_steps=14 format=2]

[ext_resource path="res://Stage.gd" type="Script" id=1]
[ext_resource path="res://Shader.tscn" type="PackedScene" id=2]
[ext_resource path="res://PauseScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Raccoon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Seagull.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/CoolSheet.png" type="Texture" id=7]
[ext_resource path="res://Boundaries.tscn" type="PackedScene" id=8]
[ext_resource path="res://HighscoreList.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="Animation" id=4]
resource_name = "GameOver"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Back3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 2.1 ),
"transitions": PoolRealArray( 1.86607, 1.86607, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 225 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Viewport/Back2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.5 ),
"transitions": PoolRealArray( 1.86607, 1.86607, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 225 ), Vector2( 0, 225 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Viewport/Back:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 2.5 ),
"transitions": PoolRealArray( 1.86607, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 225 ), Vector2( 0, 225 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Viewport/HUD/HUD:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 2.5 ),
"transitions": PoolRealArray( 1.86607, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 225 ), Vector2( 0, 225 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Viewport/HighscoreLayer:transform")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.7, 2.5, 3 ),
"transitions": PoolRealArray( 1, 2, 0.258816, 1 ),
"update": 0,
"values": [ Transform2D( 1, 0, 0, 1, 0, -225 ), Transform2D( 1, 0, 0, 1, 0, -225 ), Transform2D( 1, 0, 0, 1, 0, -50 ), Transform2D( 1, 0, 0, 1, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Viewport/Raccoon:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 170, 300 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Viewport/Seagull:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 230, 300 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("Viewport/HighscoreLayer/HighscoreList")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_spawn"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Intro"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport/Back3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 0, 225 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Viewport/Back2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 0.329878, 1 ),
"update": 0,
"values": [ Vector2( 0, 225 ), Vector2( 0, 225 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Viewport/Back:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 1.7 ),
"transitions": PoolRealArray( 1, 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 0, 225 ), Vector2( 0, 225 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Viewport/HUD/HUD:transform")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 0.329877, 1 ),
"update": 0,
"values": [ Transform2D( 1, 0, 0, 1, 0, 100 ), Transform2D( 1, 0, 0, 1, 0, 100 ), Transform2D( 1, 0, 0, 1, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Viewport/Raccoon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1, 1.7 ),
"transitions": PoolRealArray( 1, 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 170, 378 ), Vector2( 170, 378 ), Vector2( 170, 153 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Viewport/Seagull:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1, 1.7 ),
"transitions": PoolRealArray( 1, 0.329877, 1 ),
"update": 0,
"values": [ Vector2( 230, 378 ), Vector2( 230, 378 ), Vector2( 230, 153 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_character_process"
}, {
"args": [ true ],
"method": "set_character_process"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_character_physics"
}, {
"args": [ true ],
"method": "set_character_physics"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Viewport/HighscoreLayer:transform")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Transform2D( 1, 0, 0, 1, 0, -225 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("TimerSpawn")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("TimerIncrement")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )

[node name="Debug" type="CanvasLayer" parent="."]
layer = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Debug"]
visible = false
margin_right = 400.0
margin_bottom = 40.0
alignment = 1

[node name="weight_table" type="Label" parent="Debug/HBoxContainer"]
margin_left = 71.0
margin_top = 13.0
margin_right = 151.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "weight_table"
align = 1

[node name="human_speed" type="Label" parent="Debug/HBoxContainer"]
margin_left = 155.0
margin_top = 13.0
margin_right = 244.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "human_speed"
align = 1

[node name="spawn_timer" type="Label" parent="Debug/HBoxContainer"]
margin_left = 248.0
margin_top = 13.0
margin_right = 329.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "spawn_timer"
align = 1

[node name="Shader" parent="." instance=ExtResource( 2 )]

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 4
__meta__ = {
"_editor_description_": ""
}

[node name="PauseScreen" parent="PauseLayer" instance=ExtResource( 3 )]
visible = false

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 400, 225 )
transparent_bg = true
usage = 0

[node name="HighscoreLayer" type="CanvasLayer" parent="Viewport"]
offset = Vector2( 0, -225 )
transform = Transform2D( 1, 0, 0, 1, 0, -225 )

[node name="HighscoreList" parent="Viewport/HighscoreLayer" instance=ExtResource( 10 )]

[node name="HUD" type="CanvasLayer" parent="Viewport"]
layer = 3

[node name="HUD" parent="Viewport/HUD" instance=ExtResource( 4 )]

[node name="Raccoon" parent="Viewport" instance=ExtResource( 5 )]
position = Vector2( 170, 153 )

[node name="Seagull" parent="Viewport" instance=ExtResource( 6 )]
position = Vector2( 230, 153 )

[node name="Back4" type="Sprite" parent="Viewport"]
z_index = -1
texture = ExtResource( 7 )
centered = false
hframes = 3
vframes = 2

[node name="Back3" type="Sprite" parent="Viewport"]
z_index = -1
texture = ExtResource( 7 )
centered = false
hframes = 3
vframes = 2
frame = 1

[node name="Back2" type="Sprite" parent="Viewport"]
z_index = -1
texture = ExtResource( 7 )
centered = false
hframes = 3
vframes = 2
frame = 2

[node name="Back" type="Sprite" parent="Viewport"]
z_index = -1
texture = ExtResource( 7 )
centered = false
hframes = 3
vframes = 2
frame = 3

[node name="Boundaries" parent="Viewport" instance=ExtResource( 8 )]
visible = false

[node name="SpawnLeft" type="Position2D" parent="."]
position = Vector2( -27, 131 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnRight" type="Position2D" parent="."]
position = Vector2( 427, 131 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 225.0
margin_right = 400.0
margin_bottom = 450.0
rect_scale = Vector2( 1, -1 )
texture = SubResource( 1 )

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 2.5

[node name="TimerIncrement" type="Timer" parent="."]
wait_time = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 4 )
anims/Intro = SubResource( 2 )

[connection signal="points_got" from="Viewport/Raccoon" to="Viewport/HUD/HUD" method="_on_Raccoon_points_got"]
[connection signal="raccoon_game_over" from="Viewport/Raccoon" to="." method="_on_Raccoon_raccoon_game_over"]
[connection signal="raccoon_game_over" from="Viewport/Raccoon" to="Viewport/HUD/HUD" method="_on_Raccoon_raccoon_game_over"]
[connection signal="points_got" from="Viewport/Seagull" to="Viewport/HUD/HUD" method="_on_Seagull_points_got"]
[connection signal="seagull_game_over" from="Viewport/Seagull" to="." method="_on_Seagull_seagull_game_over"]
[connection signal="seagull_game_over" from="Viewport/Seagull" to="Viewport/HUD/HUD" method="_on_Seagull_seagull_game_over"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
[connection signal="timeout" from="TimerIncrement" to="." method="_on_TimerIncrement_timeout"]

[editable path="Viewport/HighscoreLayer/HighscoreList"]
